--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Adam Berecz <adam@vueform.com>",
   "main": "./dist/slider.js",
   "types": "./src/index.d.ts",
-  "module": "./dist/slider.js",
+  "module": "./dist/slider.mjs",
   "unpkg": "./dist/slider.global.js",
   "style": "./themes/default.css",
   "repository": {
