--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "Vue 3 slider component with multihandles, tooltips merging and formatting.",
   "license": "MIT",
   "author": "Adam Berecz <adam@vueform.com>",
-  "main": "./dist/slider.js",
+  "main": "./dist/slider.cjs",
   "types": "./src/index.d.ts",
-  "module": "./dist/slider.mjs",
+  "module": "./dist/slider.cjs",
   "unpkg": "./dist/slider.global.js",
   "style": "./themes/default.css",
   "repository": {
